--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,25 @@ proc-macro2 = "1.0.66"
 quote = "1.0"
 syn = { version = "2.0", features = ["extra-traits", "full"] }
 snafu = "0.8"
-ndarray = "0.15"
+ndarray = { version = "0.15.6", features = ["rayon"] }
+rayon = "1.10.0"
+safetensors = { version = "0.4.3"}
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tiktoken-rs = "0.5.9"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+tempfile = "3.10"
+ndarray-npy = "0.8"
+candle-core = "0.8"
+candle-nn = "0.8"
+approx = "0.5.1"
+half = "2.6.0"
 
+[dev-dependencies]
+criterion = "0.5"
+candle-transformers = "0.8"
+
+# [[bench]]
+# name = "tensor_benchmark"
+# harness = false
